components/policies/production/policies/build-resources/.chainsaw-test/resources/expected-pod-remote-platform.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-remote-platform
spec:
  containers:
  - name: step-build
    resources:
      requests:
        cpu: "1"
        memory: 2Gi
      limits:
        cpu: "1"
        memory: 2Gi
